# Homework_2

./: CMakeLists.txt  main.cpp
SpaceBattle/: Angle.cpp  Angle.h  CMakeLists.txt  IMovable.h  IRotatable.h  Move.cpp  Move.h  Rotate.cpp  Rotate.h  Vector.cpp  Vector.h  Vector2d.cpp  Vector2d.h
Test/: CMakeLists.txt  test.cpp
